crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_uses_symbol_specific_renderers__instance_ref.snap
---
source: crates/ide/src/verilog_2005.rs
assertion_line: 2474
expression: normalize_hover_snapshot(instance_hover.info.as_str())
---
```systemverilog
child
```
