crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_uses_symbol_specific_renderers__module_def.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(module_hover.info.as_str())
---
```systemverilog
module child #(
    parameter logic WIDTH = 8
) (
    input wire logic clk
)
```


---

from [feature.v](<feature.v#L2>)
