crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_uses_symbol_specific_renderers__module_ref.snap
---
source: crates/ide/src/verilog_2005.rs
assertion_line: 2465
expression: normalize_hover_snapshot(inst_module_hover.info.as_str())
---
```systemverilog
module child #(parameter WIDTH = 8) (
  input wire clk
);
```


---

from [feature.v](<feature.v#L2>)
