crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_uses_symbol_specific_renderers__param_def.snap
---
source: crates/ide/src/verilog_2005.rs
assertion_line: 2492
expression: normalize_hover_snapshot(param_hover.info.as_str())
---
```systemverilog
logic signed[31:0]
```
