crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_uses_symbol_specific_renderers__port_def.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(port_hover.info.as_str())
---
```systemverilog
input wire logic clk
```


---

in `child` from [feature.v](<feature.v#L3>)
