crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_uses_symbol_specific_renderers__task_def.snap
---
source: crates/ide/src/verilog_2005.rs
assertion_line: 2501
expression: normalize_hover_snapshot(task_hover.info.as_str())
---
```systemverilog
void
```
